# voip_workspace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assignments/: CMakeLists.txt
assignments/base/: CMakeLists.txt  main.cpp  soundcard.cpp  soundcard.h  voip_application.cpp  voip_application.h
demo/: CMakeLists.txt  hello_rtaudio.cpp  socket_demo.cpp  tonegen.cpp
toolbox/: CMakeLists.txt
toolbox/include/: audiobuffer.h  socket.h  soundcard.h
toolbox/src/: audiobuffer.cpp  soundcard.cpp
toolbox/src/posix/: socket_posix.cpp
toolbox/src/win/: socket_win.cpp
